// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminApplicationOverview Renders 1 room correctly 1`] = `
<Connect(_Container)>
  <_Container
    applications={Array []}
    getAllApplications={[Function]}
    getRooms={[Function]}
    rooms={Array []}
  >
    <Presentational
      applications={Array []}
      filterFunction={[Function]}
      rooms={Array []}
    >
      <div
        className="main-content"
      >
        <Sidetittel>
          <TypografiBase
            type="sidetittel"
          >
            <h1
              className="typo-sidetittel"
            >
              Applications
            </h1>
          </TypografiBase>
        </Sidetittel>
        <SearchBar
          filterFunction={[Function]}
        >
          <Input
            bredde="fullbredde"
            className="search-bar"
            disabled={false}
            label=""
            onChange={[Function]}
            placeholder="Search ..."
          >
            <div
              className="skjemaelement search-bar"
            >
              <label
                className="skjemaelement__label"
                htmlFor="0552920924-25808-24667-17642-85671533200886"
              />
              <input
                className="skjemaelement__input input--fullbredde"
                disabled={false}
                id="0552920924-25808-24667-17642-85671533200886"
                onChange={[Function]}
                placeholder="Search ..."
                type="text"
              />
              <SkjemaelementFeilmelding>
                <div
                  aria-live="assertive"
                  role="alert"
                />
              </SkjemaelementFeilmelding>
            </div>
          </Input>
        </SearchBar>
      </div>
    </Presentational>
  </_Container>
</Connect(_Container)>
`;

exports[`AdminApplicationOverview Renders nothing correctly 1`] = `
<Connect(_Container)>
  <_Container
    applications={Array []}
    getAllApplications={[Function]}
    getRooms={[Function]}
    rooms={Array []}
  >
    <Presentational
      applications={Array []}
      filterFunction={[Function]}
      rooms={Array []}
    >
      <div
        className="main-content"
      >
        <Sidetittel>
          <TypografiBase
            type="sidetittel"
          >
            <h1
              className="typo-sidetittel"
            >
              Applications
            </h1>
          </TypografiBase>
        </Sidetittel>
        <SearchBar
          filterFunction={[Function]}
        >
          <Input
            bredde="fullbredde"
            className="search-bar"
            disabled={false}
            label=""
            onChange={[Function]}
            placeholder="Search ..."
          >
            <div
              className="skjemaelement search-bar"
            >
              <label
                className="skjemaelement__label"
                htmlFor="109676459-22902-30287-6349-5269550115762"
              />
              <input
                className="skjemaelement__input input--fullbredde"
                disabled={false}
                id="109676459-22902-30287-6349-5269550115762"
                onChange={[Function]}
                placeholder="Search ..."
                type="text"
              />
              <SkjemaelementFeilmelding>
                <div
                  aria-live="assertive"
                  role="alert"
                />
              </SkjemaelementFeilmelding>
            </div>
          </Input>
        </SearchBar>
      </div>
    </Presentational>
  </_Container>
</Connect(_Container)>
`;
